package sys.stamp;
import "sys/Common.proto";

option java_package = "nirvana.hall.protocol.sys.stamp";

option java_outer_classname = "UpdatePortraitProto";

//人像修改请求
message UpdatePortraitRequest {
    extend BaseRequest {
        optional UpdatePortraitRequest cmd = 312;
    }
    required string personId = 1;
    required string fgp = 2;
    required string gatherData = 3;
}

message UpdatePortraitResponse {
    extend BaseResponse {
        optional UpdatePortraitResponse cmd = 312;
    }
    optional string next = 1;

}